k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-deployment
  namespace: otus-crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud
  template:
    metadata:
      labels:
        app: crud
    spec:
      containers:
        - name: crud
          image: humokobil/crud:v1
          ports:
            - name: web 
              containerPort: 8000
